--- a/index.html
+++ b/index.html
@@ -10,9 +10,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Image/Avatar-4.png" type="image/x-icon">
-
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1 class="border-line">New Bigining of <span class="name-color">MahbuB_hoQ</span> </h1>
+            <h3>How the journey begins!!</h3>
+            <p>To become a Web Developer, you should have an understanding of HTML, CSS, and JavaScript. It's also recommended to learn about CSS and CSS frameworks. Developing these fundamental web development skills will give you the foundation and logic for communicating with programming languages.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/kazimahbubul-hoq/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="Image/Avatar-ed-1.png" alt="A Cartoon Avatar">
+        </div>
+    </section>
+    <section>
+        <div class="half-width">
+            <img src="Image/Avatar-ed-3.png" alt="A Developer Cartoon image">
+        </div>
+        <div class="half-width">
+            <h1 class="webtag-border">Become a <span class="name-color">Web Developer</span></h1>
+            <h2>How to become a Web Developer in five steps:</h2>
+            <ol>
+                <li>Learn web development fundamentals.</li>
+                <li>Choose a development specialization.</li>
+                <li>Learn key programming languages for web development.</li>
+                <li>Work on projects to develop your Web Developer skills.</li>
+                <li>Build a web development portfolio.</li>
+            </ol>
+        </div>
+    </section>
 </body>
 </html>
